--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ packages = [{include = "pneumonia_classifier"}]
 python = ">=3.9,<3.10"
 torch = "^2.0.1"
 torchvision = "^0.15.2"
-fastapi = "^0.97.0"
+fastapi = "^0.108.0"
 uvicorn = "^0.22.0"
 python-multipart = "^0.0.6"
 pillow = "^9.5.0"
@@ -23,6 +23,8 @@ azure-identity = "^1.15.0"
 azure-mgmt-resource = "^23.0.1"
 azure-mgmt-containerinstance = "^10.1.0"
 azure-mgmt-containerregistry = "^10.2.0"
+httpx = "0.24.1"
+setuptools = "^79.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.1"
@@ -32,6 +34,8 @@ mypy = "^1.3.0"
 flake8 = "^6.0.0"
 pre-commit = "^3.3.2"
 jupyter = "^1.0.0"
+autoflake = "^2.3.1"
+ruff = "^0.11.6"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
