fixed static type analysis errors in the code

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,12 +1,11 @@
 [mypy]
-python_version = "3.9"
+python_version = 3.9
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
 disallow_incomplete_defs = true
 check_untyped_defs = true
 
-# Игнорировать библиотеки без типов
 [mypy-mlflow.*]
 ignore_missing_imports = True
 
