--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,7 +33,8 @@ jobs:
     - name: Install dependencies
       run: |
         # Install CPU-only version of PyTorch before the rest of dependencies
-        pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
+        python -m pip install --no-cache-dir torch torchvision --index-url https://download.pytorch.org/whl/cpu
+        # Disable virtualenv creation to avoid environment issues
         poetry config virtualenvs.create false
         poetry install
         
@@ -47,5 +48,7 @@ jobs:
         
     - name: Test with pytest
       run: |
+        # Print PyTorch CUDA availability for debugging
+        python -c "import torch; print('CUDA available:', torch.cuda.is_available())"
         echo "Running tests in CPU-only mode for PyTorch"
         poetry run pytest tests 
